# DANCE-MAX

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
admin/: index.html  package-lock.json  package.json
backend/: alembic.ini  pyproject.toml  requirements.txt  seed.py  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_06_2305-8c6ad9aa9f9f_initial_schema.py  2026_03_11_add_real_name_parts.py
backend/api/: index.py
backend/app/: database.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  bookings.py  courses.py  directions.py  lessons.py  payments.py  promos.py  teachers.py  users.py  webhook.py
backend/app/core/: bot.py  config.py  dependencies.py  security.py  telegram.py
backend/app/models/: __init__.py  booking.py  direction.py  lesson.py  promotion.py  special_course.py  subscription.py  teacher.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  booking.py  course.py  direction.py  lesson.py  promotion.py  subscription.py  teacher.py  transaction.py  user.py
backend/app/services/: booking.py  notification.py  payment.py  subscription_deactivation.py
backend/bot/: main.py
backend/bot/handlers/: balance.py  help.py  payments.py  schedule.py  start.py
backend/bot/keyboards/: inline.py
backend/celery_app/: __init__.py  worker.py
backend/celery_app/tasks/: notifications.py  scheduled.py
backend/tests/: conftest.py  test_admin_crud.py  test_auth.py  test_bookings.py  test_lessons.py  test_payments.py  test_users.py
frontend/: index.html  (+3 more)
(+194 files in other folders)
